--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Модуль 1 - Занятие 2 - Ветвления и циклы</h1>
-    <script src="./js/repeta-examples.js"></script>
+    <!-- <script src="./js/repeta-examples.js" type="module"></script> -->
+    <script src="./js/instructor-examples.js" type="module"></script>
   </body>
 </html>
