--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Модуль 1 - Занятие 2 - Ветвления и циклы</h1>
     <!-- <script src="./js/repeta-examples.js" type="module"></script> -->
-    <script src="./js/instructor-examples.js" type="module"></script>
+    <!-- <script src="./js/instructor-examples.js" type="module"></script> -->
+    <!-- <script type="module" src="./js/gevorg-examples.js"></script> -->
   </body>
 </html>
