complete-task-04-hw

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Модуль 1 - Занятие 2 - Ветвления и циклы</h1>
     <!-- <script src="./js/repeta-examples.js" type="module"></script> -->
     <!-- <script src="./js/instructor-examples.js" type="module"></script> -->
-    <!-- <script type="module" src="./js/gevorg-examples.js"></script> -->
+    <!-- <script src="./js/gevorg-examples.js" type="module"></script> -->
+    <script src="./js/homework.js" type="module"></script>
   </body>
 </html>
